<resources>
    <string name="app_name">QR Code Reader-Barcode Scanner</string>
    <string name="quick_tile_app_name">Scanner</string>
    <string name="shortcut_scan_from_camera">Scan</string>
    <string name="shortcut_scan_from_file">Scan image</string>
    <string name="shortcut_create_barcode">Create barcode</string>
    <string name="shortcut_history">History</string>
    <string name="intent_filter_create_qr_code_text">Create QR code</string>
    <string name="intent_filter_scan_image">Scan image</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_default_message">Something went wrong</string>
    <string name="error_dialog_positive_button_text">OK</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="dialog_delete_clear_history_message">Delete history?</string>
    <string name="dialog_delete_barcode_message">Delete?</string>
    <string name="dialog_confirm_barcode_title">Confirm</string>
    <string name="dialog_confirm_barcode_positive_button">OK</string>
    <string name="dialog_confirm_barcode_negative_button">Cancel</string>
    <string name="dialog_edit_barcode_name_title">Edit name</string>
    <string name="dialog_edit_barcode_name_positive_button">OK</string>
    <string name="dialog_edit_barcode_name_negative_button">Cancel</string>
    <string name="activity_bottom_tabs_scan_tab">Scan</string>
    <string name="activity_bottom_tabs_create_tab">Create</string>
    <string name="activity_bottom_tabs_history_tab">History</string>
    <string name="activity_bottom_tabs_settings_tab">Settings</string>
    <string name="fragment_scan_barcode_from_camera_scan_from_file">Scan image</string>
    <string name="fragment_scan_barcode_from_camera_flash">Flash</string>
    <string name="fragment_scan_barcode_from_camera_barcode_saved">Saved</string>
    <string name="activity_scan_barcode_from_file_title">Scan</string>
    <string name="activity_scan_barcode_from_file_scan">OK</string>
    <string name="activity_scan_barcode_from_file_rotate_left">Rotate left</string>
    <string name="activity_scan_barcode_from_file_rotate_right">Rotate right</string>
    <string name="activity_scan_barcode_from_file_change_image">Choose another image</string>
    <string name="fragment_create_barcode_title">Create Code</string>
    <string name="fragment_create_barcode_qr_code">Create QR Code</string>
    <string name="fragment_create_barcode_qr_code_clipboard">Content from clipboard</string>
    <string name="fragment_create_barcode_qr_code_text">Text</string>
    <string name="fragment_create_barcode_qr_code_text_hint">Enter text here, and click \'%s\' to create a QR code</string>
    <string name="fragment_create_barcode_qr_code_show_all">More QR codes</string>
    <string name="fragment_create_barcode">Create Barcode</string>
    <string name="fragment_create_barcode_show_all">Barcodes and other 2D codes</string>
    <string name="fragment_create_barcode_generate_button">Generate</string>
    <string name="fragment_create_qr_code_list_title">Create QR Code</string>
    <string name="fragment_create_barcode_list_title">Create Barcode</string>
    <string name="fragment_create_barcode_list_2d">2D Barcodes</string>
    <string name="fragment_create_barcode_list_1d">1D Barcodes</string>
    <string name="activity_create_barcode_menu_item_title">Create</string>
    <string name="activity_create_barcode_contacts_menu_item_title">Contacts</string>
    <string name="fragment_create_barcode_alternative">Alternatively:</string>
    <string name="fragment_create_qr_code_url_alternative">- Open your browser app\n- Load a website\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="fragment_create_qr_code_bookmark_title_hint">Title</string>
    <string name="fragment_create_qr_code_wifi_encryption_hint">Encryption</string>
    <string name="fragment_create_qr_code_wifi_network_name_hint">Network name</string>
    <string name="fragment_create_qr_code_wifi_password_hint">Password</string>
    <string name="fragment_create_qr_code_wifi_is_hidden_hint">Hidden</string>
    <string name="fragment_create_qr_code_email_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_email_message_hint">Message</string>
    <string name="fragment_create_qr_code_sms_message_hint">Message</string>
    <string name="fragment_create_qr_code_mms_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_mms_message_hint">Message</string>
    <string name="fragment_create_qr_code_cryptocurrency_type_hint">Cryptocurrency</string>
    <string name="fragment_create_qr_code_cryptocurrency_address_hint">Receiver address</string>
    <string name="fragment_create_qr_code_cryptocurrency_amount_hint">Amount</string>
    <string name="fragment_create_qr_code_cryptocurrency_label_hint">Label</string>
    <string name="fragment_create_qr_code_cryptocurrency_message_hint">Message</string>
    <string name="fragment_create_qr_code_location_latitude_hint">Latitude</string>
    <string name="fragment_create_qr_code_location_longitude_hint">Longitude</string>
    <string name="fragment_create_qr_code_location_altitude_hint">Altitude (optional)</string>
    <string name="fragment_create_qr_code_otp_type_hint">Type</string>
    <string name="fragment_create_qr_code_otp_algorithm_hint">Algorithm</string>
    <string name="fragment_create_qr_code_otp_issuer_hint">Issuer</string>
    <string name="fragment_create_qr_code_otp_account_hint">Account</string>
    <string name="fragment_create_qr_code_otp_digits_hint">Digits</string>
    <string name="fragment_create_qr_code_otp_period_hint">Period</string>
    <string name="fragment_create_qr_code_otp_counter_hint">Counter</string>
    <string name="fragment_create_qr_code_otp_secret_hint">Secret</string>
    <string name="fragment_create_qr_code_otp_generate_random_secret">Random Secret</string>
    <string name="fragment_create_qr_code_event_title_hint">Title</string>
    <string name="fragment_create_qr_code_event_organizer_hint">Organizer</string>
    <string name="fragment_create_qr_code_event_summary_hint">Summary</string>
    <string name="fragment_create_qr_code_event_start_date_hint">Start date</string>
    <string name="fragment_create_qr_code_event_end_date_hint">End date</string>
    <string name="fragment_create_qr_code_contact_first_name_hint">First Name</string>
    <string name="fragment_create_qr_code_contact_last_name_hint">Last Name</string>
    <string name="fragment_create_qr_code_contact_organization_hint">Organization</string>
    <string name="fragment_create_qr_code_contact_job_hint">Job</string>
    <string name="fragment_create_qr_code_contact_email_hint">Email</string>
    <string name="fragment_create_qr_code_contact_phone_hint">Phone</string>
    <string name="fragment_create_qr_code_contact_fax_hint">Fax</string>
    <string name="fragment_create_qr_code_contact_address_hint">Address</string>
    <string name="fragment_create_qr_code_contact_country_hint">Country</string>
    <string name="fragment_create_qr_code_contact_region_hint">Region/State</string>
    <string name="fragment_create_qr_code_contact_postcode_hint">Postcode</string>
    <string name="fragment_create_qr_code_contact_city_hint">City</string>
    <string name="fragment_create_qr_code_contact_street_hint">Street</string>
    <string name="fragment_create_qr_code_contact_website_hint">Website</string>
    <string name="fragment_create_qr_code_contact_alternative">- Open your contacts app\n- Open an existing contact or create a new one\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="fragment_create_data_matrix_hint">Text without special characters</string>
    <string name="fragment_create_aztec_hint">Text without special characters</string>
    <string name="fragment_create_codabar_hint">Digits</string>
    <string name="fragment_create_code_39_hint">Text in upper case without special characters</string>
    <string name="fragment_create_code_93_hint">Text in upper case without special characters</string>
    <string name="fragment_create_code_128_hint">Text without special characters</string>
    <string name="fragment_create_ean_8_hint">7 digits</string>
    <string name="fragment_create_ean_13_hint">12 digits</string>
    <string name="fragment_create_itf_14_hint">Even number of digits</string>
    <string name="fragment_create_upc_a_hint">11 digits</string>
    <string name="fragment_create_upc_e_hint">7 digits</string>
    <string name="fragment_barcode_history_title">History</string>
    <string name="fragment_barcode_history_menu_title_export">Export history</string>
    <string name="fragment_barcode_history_menu_title_delete_all">Clear history</string>
    <string name="activity_export_history_title">Export history</string>
    <string name="activity_export_history_as_hint">Export as</string>
    <string name="activity_export_history_file_name_hint">File name</string>
    <string name="activity_export_history_file_name_default" translatable="false">db</string>
    <string name="activity_export_history_export">Export</string>
    <string name="activity_export_history_exported">Saved to Downloads</string>
    <string name="activity_all_permissions_title">Permissions</string>
    <string name="activity_all_permissions_normal_permissions">Normal</string>
    <string name="activity_all_permissions_vibrate_title">Vibrate</string>
    <string name="activity_all_permissions_vibrate_hint">Used to vibrate on scan</string>
    <string name="activity_all_permissions_wifi_title">Wi-Fi</string>
    <string name="activity_all_permissions_wifi_hint">Used to connect to Wi-Fi by scanning a QR code</string>
    <string name="activity_all_permissions_internet_title">Internet</string>
    <string name="activity_all_permissions_internet_hint">Used to send error reports. This can be disabled in settings.</string>
    <string name="activity_all_permissions_runtime_permissions">Runtime</string>
    <string name="activity_all_permissions_camera_title">Camera</string>
    <string name="activity_all_permissions_camera_hint">Used to scan QR codes and barcodes from camera</string>
    <string name="activity_all_permissions_read_contacts_title">Read contacts</string>
    <string name="activity_all_permissions_read_contacts_hint">Used to create a QR code by selecting a contact from your contact list</string>
    <string name="activity_all_permissions_storage_title">Storage</string>
    <string name="activity_all_permissions_storage_hint">Used to access storage when you want to save your QR code or barcode as text or image</string>
    <string name="barcode_schema_bookmark">Bookmark</string>
    <string name="barcode_schema_cryptocurrency">Bitcoin</string>
    <string name="barcode_schema_email">Email</string>
    <string name="barcode_schema_geo">Location</string>
    <string name="barcode_schema_google_play">App</string>
    <string name="barcode_schema_phone">Phone</string>
    <string name="barcode_schema_sms">SMS</string>
    <string name="barcode_schema_url">Website</string>
    <string name="barcode_schema_v_event">Event</string>
    <string name="barcode_schema_contact">Contact</string>
    <string name="barcode_schema_wifi">Wi-Fi</string>
    <string name="barcode_history_item_delete">Delete</string>
    <string name="barcode_history_item_rename">Rename</string>
    <string name="barcode_history_item_share">Share</string>
    <string name="welcome_to_app_title">Welcome to %s!</string>
    <string name="welcome_to_app_subtitle">Thanks for giving the app a try! Let\'s take a look at some things that you can do.</string>
    <string name="welcome_to_app_positive_button">Show me Around</string>
    <string name="welcome_to_app_negative_button">SKIP</string>
    <string name="welcome_to_app_image_description">Hello</string>
</resources>