<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/list_background_color"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayoutStyle"
        android:translationZ="@dimen/default_margin_extra_small"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/fragment_create_qr_code_list_title"
            style="@style/ToolbarWithBackButtonStyle"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        style="@style/ScrollStyle"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_small"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            >
            <!--<qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.IconButtonWithDelimiter2
                android:id="@+id/button_contact_mecard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_contact"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_me_card"
                />-->
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_calendar"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_v_event"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_phone"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_phone"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_email"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_email"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_sms"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_sms"
                />
            <!--<qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.IconButtonWithDelimiter2
                android:id="@+id/button_mms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_mms"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_mms"
                />-->
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_app"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_google_play"
                app:isDelimiterVisible="false"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_bookmark"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_bookmark"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_cryptocurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_bitcoin"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_cryptocurrency"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_text"
                app:iconBackground="@color/blue3"
                app:text="@string/fragment_create_barcode_qr_code_text"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_link"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_url"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_wifi"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_wifi"
                />
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_location"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_geo"
                />
            <!--<qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.IconButtonWithDelimiter2
                android:id="@+id/button_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_otp"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_otp"
                />-->
            <qr.qrcodescanner.barcodescanner.barcodereader.qrcode.qrreader.scan.feature.common.view.IconButtonWithDelimiter2
                android:id="@+id/button_contact_vcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:icon="@drawable/ic_contact"
                app:iconBackground="@color/blue3"
                app:text="@string/barcode_schema_contact"
                />
        </GridLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>