<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_welcome_dialog"
    android:backgroundTint="@color/welcome_background"
    android:paddingBottom="@dimen/default_margin_big">

   <Button
        android:id="@+id/show_me_around_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/welcome_to_app_positive_button"
       android:textColor="@color/white"
        app:backgroundTint="@color/welcome_start_into_button"
       app:layout_constraintBaseline_toBaselineOf="@+id/skip_text_view"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/skip_text_view" />

    <TextView
        android:id="@+id/skip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/welcome_to_app_negative_button"
        android:textColor="@color/welcome_skip_button"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/show_me_around_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hello_wave"
        android:contentDescription="@string/welcome_to_app_image_description" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin_big"
        android:text="@string/welcome_to_app_title"
        android:textColor="@color/welcome_skip_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/welcome_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_big"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/welcome_to_app_subtitle"
        android:textSize="16sp"
        android:textColor="@color/welcome_skip_button"
        app:layout_constraintBottom_toTopOf="@+id/show_me_around_button"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />
</androidx.constraintlayout.widget.ConstraintLayout>